# novatrustbank

./: .gitignore  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh
accounts/: adapter.py  admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py  0002_set_site.py
banking/: admin.py  apps.py  models.py  urls.py  views.py
banking/migrations/: 0001_initial.py  0002_internationaltransfer_is_otp_verified_and_more.py  0003_alter_chatsession_options_chatsession_linked_action_and_more.py  0004_chatsession_status_alter_chatsession_is_resolved_and_more.py  0005_chatsession_content_type_chatsession_object_id_and_more.py  0006_remove_internationaltransfer_amount_received_and_more.py
config/: settings.py  urls.py
core/: context_processors.py  legal_content.py  service_content.py  urls.py  views.py
static/css/: input.css  output.css
static/images/: feature-family.avif
static/js/: main.js
templates/: base.html  dashboard_base.html
templates/account/: login.html  signup.html
templates/core/: about.html  careers.html  contact.html  home.html
templates/core/legal/: page.html
templates/core/services/: page.html
templates/dashboard/: cards.html  currency_swap.html  deposit.html  index.html  loans.html  pay_bills.html  support_detail.html  support_list.html  transactions.html  transfer_international.html  transfer_local.html
templates/partials/: footer.html  form_field.html  navbar.html
