[project]
name = "novatrustbank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "django-allauth>=65.18.0",
    "django-countries>=9.0.0",
]

[dependency-groups]
dev = [
    "djlint>=1.39.2",
]

[tool.djlint]
profile = "django"
ignore = ["H006", "H021", "HO31"]
